modif index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <body>
         
         <div class="container">
-            <appli>Don't works !</appli>  
+            <appli>Dosn't works !</appli>  
         </div>
         
     </body>
